Upgrade Jetty to 12.1.x